Opravy couborů HW deffinic

--- a/FW/bp_demo_3/bp_demo_3.ioc
+++ b/FW/bp_demo_3/bp_demo_3.ioc
@@ -67,8 +67,12 @@ PA5.Locked=true
 PA5.Signal=GPIO_Input
 PA6.Locked=true
 PA6.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_PuPd
+PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.Locked=true
 PB0.Signal=GPXTI0
+PB1.GPIOParameters=GPIO_PuPd
+PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
 PB1.Signal=GPXTI1
 PB12.Locked=true
